2012-06-20 00:02  paddockd

	* [r353] ChangeLog, contrib/makefile.sol-gcc-sparc-display,
	  makefile.sol10-intel-display, makefile.sol10-sparc64-display,
	  makefile.sol9-sparc-display, src/squeezeslave/squeezeslave.c:
	  Removed RENICE feature from solaris makefiles.
	  Increased revision to 353.

2012-06-19 23:57  paddockd

	* [r352] ChangeLog, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c: Changed default state for
	  threshold_override to disabled.
	  Added help description for threshold_override.
	  Increased revision to 352.

2012-06-19 23:46  paddockd

	* [r351] ChangeLog, TODO, src/slimaudio/slimaudio_http.c,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added our own output_threshold
	  of 1.2 seconds if the server sends 0 in strm message.
	  Added buffering to PLAY state in slimaudio_output.c using
	  output_threshold. Fixes dropouts when playing the first track in
	  a playlist on Solaris.
	  Increased revision to 151.

2012-06-17 10:39  paddockd

	* [r350] ChangeLog, src/slimaudio/slimaudio_http.c,
	  src/squeezeslave/squeezeslave.c: Added -T/--threshold_override
	  undocumented option to defeat the workaround.
	  Increased revision to 350.

2012-06-14 19:05  paddockd

	* [r349] ChangeLog, makefile.linux24-i586-display,
	  scripts/buildall-lnx24mmx, src/squeezeslave/squeezeslave.c:
	  Reverted pentium-mmx build to use vorbis decoder instead of
	  tremor.
	  Disabled DEBUG for the pentium-mmx build.
	  Increased revision to 349.

2012-06-14 18:46  paddockd

	* [r348] ChangeLog, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_output.c, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c, src/squeezeslave/squeezeslave.h:
	  Added -g/--paframes and -j/--pabuffers options to configure
	  portaudio buffers at startup.
	  Updated -p/--port help section to use SLIMPROTOCOL_PORT define.
	  Increases revision to 348.

2012-06-14 12:05  paddockd

	* [r347] ChangeLog, src/slimaudio/slimaudio_output.c,