@@ -1,3 +1,10 @@
+2012-06-20 17:52  paddockd
+
+	* [r354] ChangeLog, src/slimaudio/slimaudio_decoder_vorbis.c,
+	  src/squeezeslave/squeezeslave.c: Removed TREMOR_DECODER
+	  restriction for __BIG_ENDIAN__ systems.
+	  Increased revision to 354.
+
 2012-06-20 00:02  paddockd
 
 	* [r353] ChangeLog, contrib/makefile.sol-gcc-sparc-display,
